# anna-lang

./: CMakeLists.txt  README.md  additional_licenses  anna.pro  sample.anna
AstPlot/: astplottersyntaxvisitor.cpp  astplottersyntaxvisitor.h  main.cpp
Parser/: CMakeLists.txt  Parser.pro  anna.ebnf  anna.l  annanode.cpp  annanode.h  annanode_forward.h  annasyntax.cpp  annasyntax.h  annasyntax_visitor.cpp  annasyntaxvisitor.cpp  annasyntaxvisitor.h  annatoken.cpp  annatoken.h  lex_helper.cpp  lex_helper.h  lexertoken.cpp  lexertoken.h  parser.cpp  parser.h  parser_global.cpp  parser_global.h
ParserTest/: CMakeLists.txt  ParserTest.pro
Symbol/: CMakeLists.txt  Symbol.pro  compilationunitsymbolcollection.cpp  compilationunitsymbolcollection.h  exportedsymbolvisitor.cpp  exportedsymbolvisitor.h  symbol.cpp  symbol.h  symbol_global.h
SyntaxPlot/: CMakeLists.txt  SyntaxPlot.pro  main.cpp  syntaxplottersyntaxvisitor.cpp  syntaxplottersyntaxvisitor.h
ast-plot/: ast-plot.pro  astplottersyntaxvisitor.cpp  astplottersyntaxvisitor.h  main.cpp
demo/: .gitignore  sample.anna
editor-defs/kate/: anna.xml
parser-test/: main.cpp
